integrating networking